--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,17 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+.gradient-btn{
+  background: linear-gradient(180deg, #602DA2 0%, #6376A4 100%);
+}
+
+.gradient-border{
+  border: solid 1px linear-gradient(180deg, #602DA2 0%, #6376A4 100%);
+}
+
+.stroke-shadow{
+  stroke-width: 3px;
+  stroke: #602DA2;
+  filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.5));
+}
