--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,11 @@ body {
   border: solid 1px linear-gradient(180deg, #602DA2 0%, #6376A4 100%);
 }
 
+.gradient-btn-green{
+  border-radius: 12px;
+  background: linear-gradient(180deg, #2DA263 0%, #6376A4 100%);
+}
+
 .stroke-shadow{
   stroke-width: 3px;
   stroke: #602DA2;
