auth login created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,19 @@ body {
   background: linear-gradient(180deg, #2DA263 0%, #6376A4 100%);
 }
 
+.gradient-btn-rainbow {
+  border: 1px solid; /* Remova a borda sólida anterior para evitar conflitos */
+  padding: 10px 20px;
+  font-size: 16px;
+
+  /* Adicione o gradiente diretamente ao background do botão */
+  border-image: linear-gradient(180deg, #F23636 0%, #E1C845 25%, #36F254 50%, #3698F2 100%);
+  border-image-slice: 1;
+  border-radius: 30px; /* Aumente ou diminua o valor para ajustar o grau de arredondamento */
+}
+
+
+
 .stroke-shadow{
   stroke-width: 3px;
   stroke: #602DA2;
