--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,20 @@ input:focus {
   outline: none;
 }
 
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.spin{
+  animation: spin 2s linear;
+}
+
 .gradient-btn{
   background: linear-gradient(180deg, #602DA2 0%, #6376A4 100%);
 }
